--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-<title>HOLA MUNDO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta  name="description" content="Es mi pagina web de ejemplo en la que pongo mi pagina web favorita y lo que estudio">
+    <meta  name="keywords" content="Pagina web, ordenador, David Simonyan">
+    <meta  name="author" content="David Simonyan Demchuk">
+    <meta  name="robots" content="index, follow">
+    <title>Mi primera web</title>
 </head>
 <body>
-
-<h2>HOLA MUNDO</h2>
-
-<p>En este módulo aprenderé a programar páginas web con html.</p>
-
+    <h1>David Simonmyan Demchuk</h1>
+    <hr>
+    <h2>Grado medio SMR</h2>
+    <h3>Título ESO </h3>
+    <h2>B1 inglés</h2>
+    <hr>
+    <a href="https://portal.edu.gva.es/ieselgrao/">Web instituto</a> <a href="https://www.porsche.com/spain/?mediacampaignid=04036520_&utm_campaign=_-g-porsche-sem-ao-brand-pure%20brand-cpc_&campaigncountry_region=_es_&utm_medium=_paidsearch_&campaignmodel=_other_&campaignsubtopic=_other_&campaignlanguage=_spanish_&utm_source=_googleads_&utm_content=_textads_nu_misspelling_nu_&campaignaudience=_other_-_&campaigntype=_branded_&campaignaddonparameter=_-_&campaignponumber=_phd202312915466&dclid=&gclid=CjwKCAjw0aS3BhA3EiwAKaD2ZdWIWrGxe0im1aV10sZDwd75QKmdrXF-y4xiBCrW07cHu-IRLKp9uhoCWbwQAvD_BwE&gclsrc=aw.ds">Porsche</a>   
 </body>
 </html>
